cmake_minimum_required(VERSION 3.20)
include(set_compiler_options)
set(module_source_files
    ${CMAKE_CURRENT_SOURCE_DIR}/code/private/main.cpp)
add_executable(gravitoy_video ${module_source_files})
set_generic_compiler_options(gravitoy_video PRIVATE)
target_link_libraries(gravitoy_video PRIVATE gravitoy_lib)
target_include_directories(gravitoy_video PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/code/public)
target_include_directories(gravitoy_video PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/code/private)
include(${CMAKE_CURRENT_SOURCE_DIR}/add_opencv.cmake)
